add simple reply data and display

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,10 +1,11 @@
 To do
 
 RETWEET FUNCTION
- 
+ doneeee
  
 ADD REPLY FUNCTION
 - added ui form for REPLY
 
 
 ADD QUERY SEARCH
+- add include on fly
